Fix HOME tab spacing issue in mobile navigation only

--- a/css/style.css
+++ b/css/style.css
@@ -1301,7 +1301,7 @@ fieldset {
         order: 2;
     }
     #profilepic {
-        width: 280px;
+        width: 220px;
         margin: 0 auto;
         order: 2;
     }
@@ -1381,7 +1381,7 @@ fieldset {
         order: 2;
     }
     #profilepic {
-        width: 320px;
+        width: 260px;
         margin: 0 auto;
         order: 2;
     }
